Fix header z-index

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -28,13 +28,18 @@ body {
 */
 
 /* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
-}
+.header {
+  &.navbar {
+    z-index: 4;
+  }
 
+  h3 {
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 40px;
+    padding-bottom: 19px;
+  }
+}
 /* Custom page footer */
 .footer {
   padding-top: 19px;
